syntax = "proto3";

package com.lfh;

option java_multiple_files = true;

message PingRequest{
  string ping = 1;
}

message PongResponse{
  string pong = 1;
}

service PingPongService{
  //Unary Request Response Call
  rpc unaryPingPong(PingRequest) returns(PongResponse);
  //BiDi Stream
  rpc streamPingPong(stream PingRequest) returns(stream PongResponse);
}